tests/errors/refInStruct.milo
// @error: references cannot be stored in structs

struct MyView {
    data: &string
}

fn main(): i32 {
    return 0
}

